--- a/issue-tracker-client/src/app/app.component.html
+++ b/issue-tracker-client/src/app/app.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar color="primary">
-  <button mat-icon-button>
+  <button mat-icon-button (click)="sidenav.toggle()">
     <mat-icon>menu</mat-icon>
   </button>
-  <span>Issue tracker</span>
+  <span>{{ title }}</span>
   <span class="spacer"></span>
   <button mat-button>
     <span>Logout</span>
@@ -10,7 +10,7 @@
 </mat-toolbar>
 
 <mat-sidenav-container class="container">
-  <mat-sidenav mode="side" opened>
+  <mat-sidenav #sidenav mode="side">
     <mat-nav-list>
       <a
         mat-list-item
