--- a/issue-tracker-client/src/app/issue-list/issue-list.component.html
+++ b/issue-tracker-client/src/app/issue-list/issue-list.component.html
@@ -1,17 +1,13 @@
 <h1>Issue list</h1>
 
 <mat-accordion>
-  <mat-expansion-panel hideToggle>
+  <mat-expansion-panel *ngFor="let issue of issues" hideToggle>
     <mat-expansion-panel-header>
-      <mat-panel-title>Bad UTP Port</mat-panel-title>
+      <mat-panel-title>
+        <span>{{ issue.title }}</span>
+      </mat-panel-title>
     </mat-expansion-panel-header>
-    <p>UTP Port doesn't work</p>
-  </mat-expansion-panel>
-  <mat-expansion-panel hideToggle>
-    <mat-expansion-panel-header>
-      <mat-panel-title>Bad Mouse</mat-panel-title>
-    </mat-expansion-panel-header>
-    <p>Mouse doesn't work</p>
+    <p>{{ issue.description }}</p>
   </mat-expansion-panel>
 </mat-accordion>
 
