reactive forms module

--- a/issue-tracker-client/src/app/issue-editor/issue-editor.component.html
+++ b/issue-tracker-client/src/app/issue-editor/issue-editor.component.html
@@ -1,31 +1,25 @@
 <h1>Edit issue</h1>
 
-<form #issueForm="ngForm" (ngSubmit)="submit(issueForm)">
+<form [formGroup]="issueForm" (ngSubmit)="submit()">
   <mat-form-field appearance="outline">
     <mat-label>Title</mat-label>
     <input
-      [(ngModel)]="issue.title"
+      formControlName="title"
       name="title"
       matInput
       placeholder="Bad mouse"
-      required
-      #title="ngModel"
     />
     <mat-error *ngIf="title.invalid">
-      <span *ngIf="title.hasError('required')">
-        This field is required.
-      </span>
+      <span *ngIf="title.hasError('required')"> This field is required. </span>
     </mat-error>
   </mat-form-field>
   <mat-form-field appearance="outline">
     <mat-label>Description</mat-label>
     <textarea
-      [(ngModel)]="issue.description"
+      formControlName="description"
       name="description"
       matInput
       placeholder="Bad mouse"
-      required
-      #description="ngModel"
     ></textarea>
     <mat-error *ngIf="description.invalid">This field is required.</mat-error>
   </mat-form-field>
