--- a/issue-tracker-client/src/app/app.component.html
+++ b/issue-tracker-client/src/app/app.component.html
@@ -14,7 +14,7 @@
     <mat-nav-list>
       <a
         mat-list-item
-        [routerLink]="['/', 'issue-list']"
+        [routerLink]="['/', 'issues']"
         routerLinkActive="active"
         >Issues</a
       >
