--- a/issue-tracker-client/src/app/issue-editor/issue-editor.component.html
+++ b/issue-tracker-client/src/app/issue-editor/issue-editor.component.html
@@ -1,6 +1,6 @@
-<h1>Edit issue</h1>
+<h1 mat-dialog-title>Edit issue</h1>
 
-<form [formGroup]="issueForm" (ngSubmit)="submit()">
+<form mat-dialog-content [formGroup]="issueForm" (ngSubmit)="submit()">
   <mat-form-field appearance="outline">
     <mat-label>Title</mat-label>
     <input
@@ -23,7 +23,7 @@
     ></textarea>
     <mat-error *ngIf="description.invalid">This field is required.</mat-error>
   </mat-form-field>
-  <div>
+  <div class="mat-dialog-actions">
     <button mat-raised-button color="primary">Save</button>
   </div>
 </form>
