--- a/issue-tracker-client/src/app/issue-editor/issue-editor.component.html
+++ b/issue-tracker-client/src/app/issue-editor/issue-editor.component.html
@@ -14,6 +14,16 @@
     </mat-error>
   </mat-form-field>
   <mat-form-field appearance="outline">
+    <mat-label>Place</mat-label>
+    <input
+      formControlName="place"
+      name="place"
+      matInput
+      placeholder="2-201"
+    />
+    <mat-error *ngIf="place.invalid">This field is required.</mat-error>
+  </mat-form-field>
+  <mat-form-field appearance="outline">
     <mat-label>Description</mat-label>
     <textarea
       formControlName="description"
