--- a/issue-tracker-client/src/app/app.component.html
+++ b/issue-tracker-client/src/app/app.component.html
@@ -4,7 +4,14 @@
   </button>
   <span>{{ title }}</span>
   <span class="spacer"></span>
-  <button mat-button>
+  <button
+    *ngIf="!authService.isLoggedIn"
+    mat-button
+    [routerLink]="['/', 'login']"
+  >
+    <span>Login</span>
+  </button>
+  <button *ngIf="authService.isLoggedIn" mat-button (click)="logout()">
     <span>Logout</span>
   </button>
 </mat-toolbar>
@@ -12,13 +19,9 @@
 <mat-sidenav-container class="container">
   <mat-sidenav #sidenav mode="side">
     <mat-nav-list>
-      <a
-        mat-list-item
-        [routerLink]="['/', 'issues']"
-        routerLinkActive="active"
+      <a mat-list-item [routerLink]="['/', 'issues']" routerLinkActive="active"
         >Issues</a
       >
-      <a mat-list-item>Profile</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
